gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail19911a.d
version https://git-lfs.github.com/spec/v1
oid sha256:71b2b69f0c0c3967a62ea98b8d58db4ffe8ad19cb861a03856bd5ce4a3b8a72c
size 193
